_curso/23_service_mesh_istio/deployment-canary/nginx-b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-nginx-app
  template:
    metadata:
      labels:
        app: sample-nginx-app
        version: deploy-b
    spec:
      containers:
      - name: nginx-version-b
        image: nginx:1.14.2
        ports:
        - containerPort: 80
