_curso/23_service_mesh_istio/deployment-canary/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer
  selector:
    app: sample-nginx-app
  ports:
  - port: 8000
    targetPort: 80
    nodePort: 30000
