_curso/23_service_mesh_istio/deployment-canary/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
      # simple: ROUND_ROBIN
      # simple: LEAST_CONN
  subsets:
    - name: v1
      labels:
        version: deploy-a
      trafficPolicy:
        loadBalancer:
          simple: LEAST_CONN
    - name: v2
      labels:
        version: deploy-b
